--- a/assets/scss/layouts/_layouts.grid.scss
+++ b/assets/scss/layouts/_layouts.grid.scss
@@ -7,6 +7,7 @@
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: var(--base-margin);
     align-items: center;
+    margin-bottom: calc(var(--base-margin) * 2);
 }
 
 .Grid-item {
