back to top link

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
 <header class="Header">
-  <a href="{{ $.Site.BaseURL }}">{{ .Site.Title }}</a>
+  <a class="top" href="{{ $.Site.BaseURL }}">{{ .Site.Title }}</a>
   {{ partial "nav.html" . }}
 </header>
