feature(images): added support for lazyloading

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,3 +28,4 @@
 @import "utilities/utilities.heading";
 @import "utilities/utilities.spacing";
 @import "utilities/utilities.layout";
+@import "utilities/utilities.image";
