--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,1 +1,1 @@
-<img class="Grid-item cld-responsive Lightbox" src="{{ .Site.Params.cloudinary_url }}w_auto,dpr_auto,c_scale,f_auto,q_auto/{{.Get "src" }}" alt="{{.Get "alt" }}">
+<img class="Grid-item cld-responsive lazyload Lightbox" src="{{ .Site.Params.cloudinary_url }}w_auto,dpr_auto,c_scale,f_auto,q_auto/{{.Get "src" }}" alt="{{.Get "alt" }}">
