--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,3 +1,7 @@
-<nav>
-  <a href="/about">about</a>
+<nav class="Nav">
+  <ul class="NavList">
+    <li class="NavList-item">
+      <a class="NavList-itemLink" href="/about">about</a>
+    </li>
+  </ul>
 </nav>
