--- a/assets/scss/abstracts/_abstracts.typography.scss
+++ b/assets/scss/abstracts/_abstracts.typography.scss
@@ -6,40 +6,31 @@
     --font-system-rg: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --font-system-md: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --font-system-mn: "SF Mono", "Monaco", "Inconsolata", "Fira Mono", "Droid Sans Mono", "Source Code Pro", monospace;
-   
+
     --font-weight-regular: 400;
     --font-weight-medium: 500;
-    --font-weight-bold: 700;
-
-    --base-font-size: 16px;
-    --base-line-height: 1.5; // 24px (line-height in px) / 16x (base-font-size) = 1.5 
+    --font-weight-bold: 600;
+    --base-font-size: 1em; // 16px
+    --base-line-height: 1.4; // 24px (line-height in px) / 16x (base-font-size) = 1.5 
     --base-margin: 1rem;
-
     --font-size-xl: 4rem; // 72px
     --font-size-l: 1.5rem; // 24px
     --font-size-m: 1rem; // 16px
     --font-size-s: .75rem; // 12px
-    
-    --line-height-xl: 4rem; // 64px
-    --line-height-l: 2rem; // 32px
-    --line-height-m: 1.5rem; // 24px
-
+    --line-height-tight: 1;
+    --line-height-medium: var(--base-line-height);
+    --line-height-loose: 1.6;
 }
- 
+
 
 @include breakpoint(sm) {
     :root {
-        --base-font-size: 32px;
-        --base-line-height: 1.25; // 40px (line-height in px) / 32x (base-font-size) = 1.25
-        --base-margin: 1.6rem;
+        --base-font-size: 1.5em; // 24px
+        --base-margin: 1.33em; // 32px
 
-        --font-size-xl: 7rem; // 140px
-        --font-size-l: 1.6rem; // 32px
-        --font-size-m: 1rem; // 20px
-        --font-size-s: .8rem; // 16px
-
-        --line-height-xl: 6.4rem; // 128px
-        --line-height-l: 2rem; // 40px
-        --line-height-m: 1.6rem; // 32px
+        --font-size-xl: calc(var(--base-font-size) * 4); // 96px 
+        --font-size-l: calc(var(--base-font-size) * 1.33); // 32px
+        --font-size-m: var(--base-font-size); // 24px
+        --font-size-s: calc(var(--base-font-size) * .67); // 16px
     }
-  }
+}
