--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
 {{ partial "head.html" . }}
 
   {{ block "main" . }}
    <!-- The part of the page that begins to differ between templates -->
   {{ end }}
 
-{{ partial "footer.html" . }}
+{{ partialCached "footer.html" . }}
+{{ partialCached "scripts.html" . }}
+</body>
+</html>
