--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-
+  <main class="Page">
   <article class="Article">
     <h1>{{ .Title }}</h1>
     {{ .Content }}
   </article>
-
+  </main>
 {{ end }}
