--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,26 +1,10 @@
 <footer class="Footer">
-  <a href="#top">End.</a>
+  <nav class="Nav">
+    <ul class="NavList">
+      <li class="NavList-item">
+        <a class="NavList-itemLink" href="#top">End.</a>
+      </li>
+    </ul>
+  </nav>
 </footer>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Load responsive images via Cloudinary -->
-  {{ $cloudinary := resources.Get "js/cloudinary-core-shrinkwrap.min.js" }}
-  {{ $app := resources.Get "js/app.js" }}
-  {{ $lazysizes := resources.Get "js/lazysizes.js" }}
-
-  {{ $main := slice $cloudinary $app $lazysizes | resources.Concat "main.js" }}
-
-  {{ if not .Site.IsServer }}
-    {{ $main = $main | minify | fingerprint }}
-  {{ end }} 
-  <script src="{{ $main.Permalink }}" {{ with $main.Data.Integrity }} integrity="{{ . }}"{{ end }}></script>
-
-  <script>
-      var cl = cloudinary.Cloudinary.new({
-        cloud_name: "harrycresswell"
-      });
-      
-      cl.responsive();
-  </script>
-</body>
-</html>
