feat: add lity library for better accesibility

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -31,3 +31,4 @@
  @import "utilities/utilities.spacing";
  @import "utilities/utilities.layout";
  @import "utilities/utilities.image";
+ @import "utilities/utilities.lity";
