--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,1 +1,3 @@
-<img class="Grid-item cld-responsive lazyload Lightbox" src="{{ .Site.Params.cloudinary_url }}w_auto,dpr_auto,c_scale,f_auto,q_auto/{{.Get "src" }}" alt="{{.Get "alt" }}">
+<a href="{{ .Site.Params.cloudinary_url }}w_auto,dpr_auto,c_scale,f_auto,q_auto/{{.Get "src" }}" data-lity>
+  <img class="Grid-item cld-responsive lazyload Lightbox" src="{{ .Site.Params.cloudinary_url }}w_auto,dpr_auto,c_scale,f_auto,q_auto/{{.Get "src" }}" alt="{{.Get "alt" }}" />
+</a>
